Closed Bug 1340510 Opened 8 years ago Closed 8 years ago

Fix nsBaseWidget::RevokeTransactionIdAllocator()

Categories

(Core :: Graphics: WebRender, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla54

People

(Reporter: sotaro, Assigned: sotaro)

Details

Attachments

(1 file)

nsBaseWidget::RevokeTransactionIdAllocator() does not handle WebRenderLayerManager.
Attachment #8838507 - Flags: review?(nical.bugzilla)
Assignee: nobody → sotaro.ikeda.g
Attachment #8838507 - Flags: review?(nical.bugzilla) → review+
Pushed by sikeda@mozilla.com: https://hg.mozilla.org/projects/graphics/rev/e5a4ef40e13b Fix nsBaseWidget::RevokeTransactionIdAllocator() r=nical
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: