Bug 1340510 - Fix nsBaseWidget::RevokeTransactionIdAllocator() r=nical